samples/_failures_safe/1761446871_372e75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8c7d2ed.c: In function ‘main’:
./samples/SAFE/__tmp_d8c7d2ed.c:148:13: error: expected declaration or statement at end of input
  148 |             transpose_matrix(&mat1, &result);
      |             ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d8c7d2ed.c:148:13: error: expected declaration or statement at end of input
